# linera-diary

./: .gitignore  1-start-network.sh  2-deploy-contract.sh  API.md  Cargo.toml  DEPLOYMENT.md  DEPLOY_INSTRUCTIONS.md  FRONTEND_READY.md  LICENSE  QUICKSTART.md  README.md  SETUP_COMPLETE.md  START_HERE.md  build.sh  deploy-local.sh  deploy-now.sh  deploy.sh  start-service.sh  start-web.sh  test-deployment.sh
backend/: Cargo.toml
backend/src/: contract.rs  lib.rs  service.rs  state.rs
backend/tests/: single_chain.rs
client/: DEPLOYMENT.md  README-FRONTEND.md  README.md  UI-ENHANCEMENT-GUIDE.md  app.js  config.js  index.html  index.html.old  linera-diary.js.old  netlify.toml  package-lock.json  package.json  styles.css  styles.css.old  vercel.json
