[workspace]
members = ["backend"]
resolver = "2"



[workspace.dependencies]
# Linera dependencies
linera-sdk = { git = "https://github.com/linera-io/linera-protocol.git", branch = "main" }
linera-views = { git = "https://github.com/linera-io/linera-protocol.git", branch = "main" }

# Async and serialization
async-graphql = "7.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

# Hashing and crypto
sha2 = "0.10"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
