[package]
name = "diary-backend"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Linera dependencies
linera-sdk = { workspace = true }
linera-views = { workspace = true }

# Async and GraphQL
async-graphql = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Hashing
sha2 = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]
